fix: toc title now left aligned

--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -11,6 +11,7 @@
     padding: 0;
     font: inherit;
     text-decoration: none;
+    text-align: left;
     text-rendering: inherit;
     cursor: pointer;
   }
